--- a/public/assets/scss/pages/_home.scss
+++ b/public/assets/scss/pages/_home.scss
@@ -122,6 +122,7 @@
     }
     .home-hero-image {
         height: 50vh;
+        min-height: 300px;
         margin-bottom: 70px;
     }
 }
